--- a/common/Chart.yaml
+++ b/common/Chart.yaml
@@ -8,7 +8,7 @@ keywords:
   - common
   - template
   - function
-name: xenoss-helm-common
+name: common
 sources:
   - https://github.com/xenoss/xenoss-helm-common
 type: library
