--- a/filex/templates/deployment.yaml
+++ b/filex/templates/deployment.yaml
@@ -57,6 +57,9 @@ spec:
               value: {{ tpl .Values.image.loglevel $ }}
             - name: MONGO_HOST
               value: {{ tpl .Values.mongo_host $ }}
+            {{- if .Values.extraEnvVars }}
+            {{- tpl ( .Values.extraEnvVars | toYaml ) $ | nindent 12 }}
+            {{- end }}
           {{- if or .Values.extraEnvVarsCM .Values.extraEnvVarsSecret }}
           envFrom:
             {{- if .Values.extraEnvVarsCM }}
