--- a/common/templates/service.yaml
+++ b/common/templates/service.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.service.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -41,3 +42,4 @@ spec:
     {{- tpl ( .Values.service.extraPorts | toYaml ) $ | nindent 4 }}
   {{- end }}
   selector: {{- include "common.matchLabels" . | nindent 4 }}
+{{- end }}
