--- a/common/values.yaml
+++ b/common/values.yaml
@@ -3,15 +3,8 @@ globaL:
   ##
   extraDeploy: []
 
-## Metrics configuration
-##
 metrics:
-  ## @param metrics.enabled Enable exposing  statistics
-  ## ref: https://github.com/resmoio/kubernetes-event-exporter/blob/858089f2dc42243c0939a7f13a76fdd22e70be0f/main.go#L25
-  ##
   enabled: false
-  ##  metrics service parameters
-  ##
   service:
     ## @param metrics.service.ports.http Metrics service HTTP port
     ##
@@ -22,49 +15,49 @@ metrics:
     annotations:
       prometheus.io/scrape: "true"
       prometheus.io/port: "{{ .Values.metrics.service.ports.http }}"
+
   ## Prometheus Operator ServiceMonitor configuration
-  ##
   serviceMonitor:
-    ## @param metrics.serviceMonitor.enabled Create ServiceMonitor Resource for scraping metrics using PrometheusOperator
-    ##
     enabled: false
-    ## @param metrics.serviceMonitor.port Metrics service HTTP port
-    ##
     port: metrics
-    ## @param metrics.serviceMonitor.endpoints [array] The endpoint configuration of the ServiceMonitor. Path is mandatory. Interval, timeout and labellings can be overwritten.
-    ##
     endpoints:
       - path: /metrics
-    ## @param metrics.serviceMonitor.path Metrics service HTTP path. Deprecated: Use @param metrics.serviceMonitor.endpoints instead
-    ##
     path: ""
-    ## @param metrics.serviceMonitor.namespace Namespace which Prometheus is running in
-    ##
     namespace: ""
-    ## @param metrics.serviceMonitor.interval Interval at which metrics should be scraped
-    ##
     interval: 30s
-    ## @param metrics.serviceMonitor.scrapeTimeout Specify the timeout after which the scrape is ended
-    ## e.g:
-    ##   scrapeTimeout: 30s
-    ##
     scrapeTimeout: ""
-    ## @param metrics.serviceMonitor.labels Additional labels that can be used so ServiceMonitor will be discovered by Prometheus
-    ##
+    ##   scrapeTimeout: 30s
     labels: {}
-    ## @param metrics.serviceMonitor.selector Prometheus instance selector labels
-    ## ref: https://github.com/bitnami/charts/tree/main/bitnami/prometheus-operator#prometheus-configuration
-    ##
     selector: {}
-    ## @param metrics.serviceMonitor.relabelings RelabelConfigs to apply to samples before scraping
-    ##
     relabelings: []
-    ## @param metrics.serviceMonitor.metricRelabelings MetricRelabelConfigs to apply to samples before ingestion
-    ##
     metricRelabelings: []
-    ## @param metrics.serviceMonitor.honorLabels honorLabels chooses the metric's labels on collisions with target labels
-    ##
     honorLabels: false
-    ## @param metrics.serviceMonitor.jobLabel The name of the label on the target service to use as the job name in prometheus.
-    ##
     jobLabel: ""
+
+service:
+  enabled: false
+  type: ClusterIP
+  ports: {}
+#    http: 8080
+#    private: 8081
+  ## Node ports to expose
+  nodePorts: {}
+#    http: ""
+#    private: ""
+  clusterIP: ""
+  loadBalancerIP: ""
+  loadBalancerSourceRanges: []
+  ##   - 10.10.10.0/24
+  annotations: {}
+  externalTrafficPolicy: Cluster
+  extraPorts: []
+#    - name: http
+#      port: 8080
+#      targetPort: http
+#    - name: httpprivate
+#      port: 8081
+#      targetPort: http
+  sessionAffinity: None
+  sessionAffinityConfig: {}
+  ##   clientIP:
+  ##     timeoutSeconds: 300
