--- a/common/templates/servicemonitor.yaml
+++ b/common/templates/servicemonitor.yaml
@@ -1,27 +1,27 @@
-{{- if and .Values.metrics.enabled .Values.metrics.serviceMonitor.enabled }}
+{{- if and .Values.global.metrics.enabled .Values.global.metrics.serviceMonitor.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: {{ template "common.fullname" . }}
-  namespace: {{ default (include "common.namespace" .) .Values.metrics.serviceMonitor.namespace }}
+  namespace: {{ default (include "common.namespace" .) .Values.global.metrics.serviceMonitor.namespace }}
   labels: {{- include "common.labels" . | nindent 4 }}
     app.kubernetes.io/component: kubernetes-event-exporter
-    {{- if .Values.metrics.serviceMonitor.labels }}
-    {{- tpl ( .Values.metrics.serviceMonitor.labels | toYaml ) $ | nindent 4 }}
+    {{- if .Values.global.metrics.serviceMonitor.labels }}
+    {{- tpl ( .Values.global.metrics.serviceMonitor.labels | toYaml ) $ | nindent 4 }}
     {{- end }}
-    {{- if .Values.commonLabels }}
-    {{- tpl ( .Values.commonLabels | toYaml ) $ | nindent 4 }}
+    {{- if .Values.global.commonLabels }}
+    {{- tpl ( .Values.global.commonLabels | toYaml ) $ | nindent 4 }}
     {{- end }}
-  {{- if .Values.commonAnnotations }}
-  annotations: {{- tpl (  .Values.commonAnnotations | toYaml ) $ | nindent 4 }}
+  {{- if .Values.global.commonAnnotations }}
+  annotations: {{- tpl (  .Values.global.commonAnnotations | toYaml ) $ | nindent 4 }}
   {{- end }}
 spec:
-  {{- if .Values.metrics.serviceMonitor.jobLabel }}
-  jobLabel: {{ .Values.metrics.serviceMonitor.jobLabel }}
+  {{- if .Values.global.metrics.serviceMonitor.jobLabel }}
+  jobLabel: {{ .Values.global.metrics.serviceMonitor.jobLabel }}
   {{- end }}
   endpoints:
-    {{- $defaultEndpoint := pick .Values.metrics.serviceMonitor "port" "interval" "scrapeTimeout" "relabelings" "metricRelabelings" "honorLabels" }}
-    {{- $endpoints := ternary (.Values.metrics.serviceMonitor.endpoints) (list (dict "path" .Values.metrics.serviceMonitor.path)) (empty .Values.metrics.serviceMonitor.path) }}
+    {{- $defaultEndpoint := pick .Values.global.metrics.serviceMonitor "port" "interval" "scrapeTimeout" "relabelings" "metricRelabelings" "honorLabels" }}
+    {{- $endpoints := ternary (.Values.global.metrics.serviceMonitor.endpoints) (list (dict "path" .Values.global.metrics.serviceMonitor.path)) (empty .Values.global.metrics.serviceMonitor.path) }}
     {{- range $endpoints }}
     {{- $endpoint := merge . $defaultEndpoint }}
     - port: {{ $endpoint.port }}
@@ -47,8 +47,8 @@ spec:
       - {{ include "common.namespace" . | quote }}
   selector:
     matchLabels: {{- include "common.matchLabels" . | nindent 6 }}
-      {{- if .Values.metrics.serviceMonitor.selector }}
-      {{- tpl ( .Values.metrics.serviceMonitor.selector | toYaml ) $ | nindent 6 }}
+      {{- if .Values.global.metrics.serviceMonitor.selector }}
+      {{- tpl ( .Values.global.metrics.serviceMonitor.selector | toYaml ) $ | nindent 6 }}
       {{- end }}
       app.kubernetes.io/component: metrics
 {{- end }}
